--- a/src/app/pages/expediente/expediente.component.html
+++ b/src/app/pages/expediente/expediente.component.html
@@ -1,5 +1,9 @@
 <!-- \src\app\pages\expediente\expediente.component.html -->
  
+<!-- Toolbar -->
+<p-toast></p-toast>
+<p-confirmDialog></p-confirmDialog>
+
 <div class="container">
   <!-- Toolbar -->
   <div class="toolbar">
